--- a/libreria pandas.ipynb
+++ b/libreria pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9nA71OFje2NQ+ngevWv49",
+      "authorship_tag": "ABX9TyOwWGSzijejAF2j2L+dKm7C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "id": "Iy0cnmw83BG1",
         "outputId": "48688854-9448-4546-8eb0-8a90c3bf243d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,32 +72,34 @@
         "import pandas as pd\n",
         "\n",
         "datas = {\n",
-        "        'Nombre' : ['Ana','Jorge','Roberto'],\n",
-        "        'Edad' : [30,25,50],\n",
-        "        'Ciudad': ['Montevideo','Buenos Aires','Brasilia']\n",
+        "        'Nombre' : ['Ana','Jorge','Roberto','Diego','Federico'],\n",
+        "        'Edad' : [30,25,50,33,80],\n",
+        "        'Ciudad': ['Montevideo','Buenos Aires','Brasilia','Bogota', 'Santiago'],\n",
         "        }\n",
         "\n",
         "df = pd.DataFrame(datas)\n",
         "\n",
-        "print(df.loc[0])"
+        "print(df.loc[2:4,['Nombre', 'Ciudad']]) ##el .loc loquea o selecciona: primero las filas, (los dos : separa entre que fila y fila va a seleccionar), seguido a eso elige la columnas que queres filtrar\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pb0rwE1R8vvV",
-        "outputId": "78a56229-3c74-4bfc-e993-c65adefb277a"
+        "outputId": "c855aac7-9ab8-4707-b048-2386cf01c0aa"
       },
-      "execution_count": 41,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Nombre           Ana\n",
-            "Edad              30\n",
-            "Ciudad    Montevideo\n",
-            "Name: 0, dtype: object\n"
+            "     Nombre    Ciudad\n",
+            "2   Roberto  Brasilia\n",
+            "3     Diego    Bogota\n",
+            "4  Federico  Santiago\n"
           ]
         }
       ]
@@ -139,7 +141,7 @@
         "id": "XOXTfthn3e80",
         "outputId": "2705b346-6dc0-4d38-851e-65a690c5311e"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
