--- a/libreria pandas.ipynb
+++ b/libreria pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwWGSzijejAF2j2L+dKm7C",
+      "authorship_tag": "ABX9TyOad2Sy8zltJmqUPAFGvQy5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,7 +79,7 @@
         "\n",
         "df = pd.DataFrame(datas)\n",
         "\n",
-        "print(df.loc[2:4,['Nombre', 'Ciudad']]) ##el .loc loquea o selecciona: primero las filas, (los dos : separa entre que fila y fila va a seleccionar), seguido a eso elige la columnas que queres filtrar\n",
+        "print(df.loc[2:4,['Nombre', 'Ciudad']]) ##el .loc sirve para filtrar, primero toma la/s fila/s, (los dos : separa entre que fila y fila va a seleccionar), seguido a eso elige la/s columna/s que queres filtrar\n",
         "\n",
         "\n"
       ],
