--- a/libreria pandas.ipynb
+++ b/libreria pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOad2Sy8zltJmqUPAFGvQy5",
+      "authorship_tag": "ABX9TyP8M3O11ti2N4TH2KhFVs46",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,27 +79,39 @@
         "\n",
         "df = pd.DataFrame(datas)\n",
         "\n",
-        "print(df.loc[2:4,['Nombre', 'Ciudad']]) ##el .loc sirve para filtrar, primero toma la/s fila/s, (los dos : separa entre que fila y fila va a seleccionar), seguido a eso elige la/s columna/s que queres filtrar\n",
+        "print(df)\n",
         "\n",
-        "\n"
+        "print(df.loc[2:4,['Nombre','Edad']]) ##el .loc sirve para filtrar, primero toma la/s fila/s, (los dos : separa entre que fila(inclusive) y fila(inclusive) va a seleccionar), seguido a eso elige la/s columna/s que queres filtrar\n",
+        "\n",
+        "print(df.iloc[2:5,0:2]) ##el .iloc sirve para filtrar pero por numero de fila y numero de columna, y selecciona el primer numero hasta el anterior del segundo numero elegido\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pb0rwE1R8vvV",
-        "outputId": "c855aac7-9ab8-4707-b048-2386cf01c0aa"
+        "outputId": "8d6bec1b-92c8-4a09-fc3f-549dad2dfded"
       },
-      "execution_count": 4,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "     Nombre    Ciudad\n",
-            "2   Roberto  Brasilia\n",
-            "3     Diego    Bogota\n",
-            "4  Federico  Santiago\n"
+            "     Nombre  Edad        Ciudad\n",
+            "0       Ana    30    Montevideo\n",
+            "1     Jorge    25  Buenos Aires\n",
+            "2   Roberto    50      Brasilia\n",
+            "3     Diego    33        Bogota\n",
+            "4  Federico    80      Santiago\n",
+            "     Nombre  Edad\n",
+            "2   Roberto    50\n",
+            "3     Diego    33\n",
+            "4  Federico    80\n",
+            "     Nombre  Edad\n",
+            "2   Roberto    50\n",
+            "3     Diego    33\n",
+            "4  Federico    80\n"
           ]
         }
       ]
