--- a/libreria pandas.ipynb
+++ b/libreria pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8M3O11ti2N4TH2KhFVs46",
+      "authorship_tag": "ABX9TyOPKxc/rOg7LZONqJeQ2GUA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,9 +79,9 @@
         "\n",
         "df = pd.DataFrame(datas)\n",
         "\n",
-        "print(df)\n",
+        "print(df,\"\\n\")\n",
         "\n",
-        "print(df.loc[2:4,['Nombre','Edad']]) ##el .loc sirve para filtrar, primero toma la/s fila/s, (los dos : separa entre que fila(inclusive) y fila(inclusive) va a seleccionar), seguido a eso elige la/s columna/s que queres filtrar\n",
+        "print(df.loc[2:4,['Nombre','Edad']],\"\\n\") ##el .loc sirve para filtrar, primero toma la/s fila/s, (los dos : separa entre que fila(inclusive) y fila(inclusive) va a seleccionar), seguido a eso elige la/s columna/s que queres filtrar\n",
         "\n",
         "print(df.iloc[2:5,0:2]) ##el .iloc sirve para filtrar pero por numero de fila y numero de columna, y selecciona el primer numero hasta el anterior del segundo numero elegido\n"
       ],
@@ -90,9 +90,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pb0rwE1R8vvV",
-        "outputId": "8d6bec1b-92c8-4a09-fc3f-549dad2dfded"
+        "outputId": "3701f0bb-2200-42a4-e961-5ab03d893265"
       },
-      "execution_count": 19,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,15 +103,107 @@
             "1     Jorge    25  Buenos Aires\n",
             "2   Roberto    50      Brasilia\n",
             "3     Diego    33        Bogota\n",
-            "4  Federico    80      Santiago\n",
+            "4  Federico    80      Santiago \n",
+            "\n",
             "     Nombre  Edad\n",
             "2   Roberto    50\n",
             "3     Diego    33\n",
-            "4  Federico    80\n",
+            "4  Federico    80 \n",
+            "\n",
             "     Nombre  Edad\n",
             "2   Roberto    50\n",
             "3     Diego    33\n",
             "4  Federico    80\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Seleccionar persona de menos de 30 que vive en Buenos Aires**"
+      ],
+      "metadata": {
+        "id": "MkyPlNDXdcer"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "menores_30 = df.loc[(df['Edad'] < 30) & (df['Ciudad']== 'Buenos Aires')]\n",
+        "\n",
+        "mayores_30 = df.loc[(df['Edad'] > 30)]\n",
+        "\n",
+        "print(menores_30)\n",
+        "\n",
+        "print(\"\\n\",mayores_30)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gpdQPrW0d0w2",
+        "outputId": "95dfcd02-3a1f-4ecd-dcd5-70085d5e6dbd"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  Nombre  Edad        Ciudad\n",
+            "1  Jorge    25  Buenos Aires\n",
+            "\n",
+            "      Nombre  Edad    Ciudad\n",
+            "2   Roberto    50  Brasilia\n",
+            "3     Diego    33    Bogota\n",
+            "4  Federico    80  Santiago\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "datos_null = {\n",
+        "        'A' : [1,2,np.nan,4], ##nan es una funcion de numpy para poder ingrear datos nulos\n",
+        "        'B' : [1,2,3,np.nan],\n",
+        "        'C' : [1,np.nan,np.nan,4],\n",
+        "        'D' : [1,2,3,4]\n",
+        "        }\n",
+        "\n",
+        "datos_nulos = pd.DataFrame(datos_null)\n",
+        "\n",
+        "datos_nulos_dropna = datos_nulos.dropna()\n",
+        "\n",
+        "print(datos_nulos.isnull(),\"\\n\") ##isnull() devuelve un DataFrame de la misma forma que el original, pero con valores booleanos\n",
+        "\n",
+        "print(datos_nulos_dropna)##dropna elimina las filas con datos nulos, en el resultado te indica la posicion de las filas con datos no nulos en sus columnas\n"
+      ],
+      "metadata": {
+        "id": "1ImTPdtrjCQd",
+        "outputId": "5c586ecb-e0ea-4cee-f0f5-de39bc4373e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "       A      B      C      D\n",
+            "0  False  False  False  False\n",
+            "1  False  False   True  False\n",
+            "2   True  False   True  False\n",
+            "3  False   True  False  False \n",
+            "\n",
+            "     A    B    C  D\n",
+            "0  1.0  1.0  1.0  1\n"
           ]
         }
       ]
