--- a/libreria pandas.ipynb
+++ b/libreria pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPKxc/rOg7LZONqJeQ2GUA",
+      "authorship_tag": "ABX9TyPmcmp1zOhdj52DUcTJ0SMn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,7 +92,7 @@
         "id": "pb0rwE1R8vvV",
         "outputId": "3701f0bb-2200-42a4-e961-5ab03d893265"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +146,7 @@
         "id": "gpdQPrW0d0w2",
         "outputId": "95dfcd02-3a1f-4ecd-dcd5-70085d5e6dbd"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,6 +167,7 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
+        "import pandas as pd\n",
         "\n",
         "datos_null = {\n",
         "        'A' : [1,2,np.nan,4], ##nan es una funcion de numpy para poder ingrear datos nulos\n",
@@ -181,6 +182,8 @@
         "\n",
         "print(datos_nulos.isnull(),\"\\n\") ##isnull() devuelve un DataFrame de la misma forma que el original, pero con valores booleanos\n",
         "\n",
+        "print(datos_nulos,\"\\n\")\n",
+        "\n",
         "print(datos_nulos_dropna)##dropna elimina las filas con datos nulos, en el resultado te indica la posicion de las filas con datos no nulos en sus columnas\n"
       ],
       "metadata": {
@@ -188,9 +191,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1ImTPdtrjCQd",
-        "outputId": "5c586ecb-e0ea-4cee-f0f5-de39bc4373e1"
+        "outputId": "d780b4be-cb41-4a60-d52c-0436e5dc4fe1"
       },
-      "execution_count": 49,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,6 +204,12 @@
             "1  False  False   True  False\n",
             "2   True  False   True  False\n",
             "3  False   True  False  False \n",
+            "\n",
+            "     A    B    C  D\n",
+            "0  1.0  1.0  1.0  1\n",
+            "1  2.0  2.0  NaN  2\n",
+            "2  NaN  3.0  NaN  3\n",
+            "3  4.0  NaN  4.0  4 \n",
             "\n",
             "     A    B    C  D\n",
             "0  1.0  1.0  1.0  1\n"
