--- a/libreria pandas.ipynb
+++ b/libreria pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmcmp1zOhdj52DUcTJ0SMn",
+      "authorship_tag": "ABX9TyOiFeGozzQ5C40pPyvlCj9o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -178,7 +178,7 @@
         "\n",
         "datos_nulos = pd.DataFrame(datos_null)\n",
         "\n",
-        "datos_nulos_dropna = datos_nulos.dropna()\n",
+        "datos_nulos_dropna = datos_nulos.dropna(axis=1) ##el axis=1 sirve para filtrar columnas con datos no nulos\n",
         "\n",
         "print(datos_nulos.isnull(),\"\\n\") ##isnull() devuelve un DataFrame de la misma forma que el original, pero con valores booleanos\n",
         "\n",
@@ -191,9 +191,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1ImTPdtrjCQd",
-        "outputId": "d780b4be-cb41-4a60-d52c-0436e5dc4fe1"
+        "outputId": "868f0ae3-1a11-43d5-b8ef-b9b7cea4660a"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,8 +211,11 @@
             "2  NaN  3.0  NaN  3\n",
             "3  4.0  NaN  4.0  4 \n",
             "\n",
-            "     A    B    C  D\n",
-            "0  1.0  1.0  1.0  1\n"
+            "   D\n",
+            "0  1\n",
+            "1  2\n",
+            "2  3\n",
+            "3  4\n"
           ]
         }
       ]
