--- a/libreria pandas.ipynb
+++ b/libreria pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOiFeGozzQ5C40pPyvlCj9o",
+      "authorship_tag": "ABX9TyMmf1Z0Fzui8ZjTtnuacFAS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -178,22 +178,28 @@
         "\n",
         "datos_nulos = pd.DataFrame(datos_null)\n",
         "\n",
+        "\n",
+        "\n",
         "datos_nulos_dropna = datos_nulos.dropna(axis=1) ##el axis=1 sirve para filtrar columnas con datos no nulos\n",
+        "\n",
+        "dnl_mean = datos_nulos.fillna(datos_nulos.mean()) ##rellenas los datos nulos con el promedio de la columna correspondiente\n",
         "\n",
         "print(datos_nulos.isnull(),\"\\n\") ##isnull() devuelve un DataFrame de la misma forma que el original, pero con valores booleanos\n",
         "\n",
         "print(datos_nulos,\"\\n\")\n",
         "\n",
-        "print(datos_nulos_dropna)##dropna elimina las filas con datos nulos, en el resultado te indica la posicion de las filas con datos no nulos en sus columnas\n"
+        "print(datos_nulos_dropna)##dropna elimina las filas con datos nulos, en el resultado te indica la posicion de las filas con datos no nulos en sus columnas\n",
+        "\n",
+        "print(dnl_mean)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1ImTPdtrjCQd",
-        "outputId": "868f0ae3-1a11-43d5-b8ef-b9b7cea4660a"
+        "outputId": "bf516fc4-01e1-41cf-a2dc-25e0e6d5feb2"
       },
-      "execution_count": 6,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +221,12 @@
             "0  1\n",
             "1  2\n",
             "2  3\n",
-            "3  4\n"
+            "3  4\n",
+            "          A    B    C  D\n",
+            "0  1.000000  1.0  1.0  1\n",
+            "1  2.000000  2.0  2.5  2\n",
+            "2  2.333333  3.0  2.5  3\n",
+            "3  4.000000  2.0  4.0  4\n"
           ]
         }
       ]
