--- a/libreria pandas.ipynb
+++ b/libreria pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmf1Z0Fzui8ZjTtnuacFAS",
+      "authorship_tag": "ABX9TyNPchXuN5Ya5IAZa984GdYz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,9 +90,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pb0rwE1R8vvV",
-        "outputId": "3701f0bb-2200-42a4-e961-5ab03d893265"
+        "outputId": "7d3b1fd2-547f-490d-f55b-78085002664b"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,7 +180,7 @@
         "\n",
         "\n",
         "\n",
-        "datos_nulos_dropna = datos_nulos.dropna(axis=1) ##el axis=1 sirve para filtrar columnas con datos no nulos\n",
+        "datos_nulos_dropna = datos_nulos.dropna(axis=1) ##el axis=1 sirve para quitar columnas con datos nulos, sin el axis, elimina las filas con datos nulos\n",
         "\n",
         "dnl_mean = datos_nulos.fillna(datos_nulos.mean()) ##rellenas los datos nulos con el promedio de la columna correspondiente\n",
         "\n",
@@ -197,9 +197,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1ImTPdtrjCQd",
-        "outputId": "bf516fc4-01e1-41cf-a2dc-25e0e6d5feb2"
+        "outputId": "d9f7ad5d-4905-406e-ff32-c0572bab82dc"
       },
-      "execution_count": 15,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,6 +227,76 @@
             "1  2.000000  2.0  2.5  2\n",
             "2  2.333333  3.0  2.5  3\n",
             "3  4.000000  2.0  4.0  4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Usando metodo de pandas Interpolate**"
+      ],
+      "metadata": {
+        "id": "muS6xcvUTZtO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "\n",
+        "datos_interpolados ={\n",
+        "                      'fechas': pd.date_range(start='1/1/2025',periods=10),\n",
+        "                      'valores': [1,3,np.nan,7,9,\n",
+        "                                  np.nan,13,15,np.nan,19]\n",
+        "\n",
+        "                    }\n",
+        "\n",
+        "di= pd.DataFrame(datos_interpolados)\n",
+        "\n",
+        "print(di.isnull())\n",
+        "\n",
+        "di['valores'] = di['valores'].interpolate(method = 'linear')\n",
+        "\n",
+        "print(di)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "pArB3dVdTWVA",
+        "outputId": "8f199ac9-3203-408d-cc9a-8b4cbd85e685",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   fechas  valores\n",
+            "0   False    False\n",
+            "1   False    False\n",
+            "2   False     True\n",
+            "3   False    False\n",
+            "4   False    False\n",
+            "5   False     True\n",
+            "6   False    False\n",
+            "7   False    False\n",
+            "8   False     True\n",
+            "9   False    False\n",
+            "      fechas  valores\n",
+            "0 2025-01-01      1.0\n",
+            "1 2025-01-02      3.0\n",
+            "2 2025-01-03      5.0\n",
+            "3 2025-01-04      7.0\n",
+            "4 2025-01-05      9.0\n",
+            "5 2025-01-06     11.0\n",
+            "6 2025-01-07     13.0\n",
+            "7 2025-01-08     15.0\n",
+            "8 2025-01-09     17.0\n",
+            "9 2025-01-10     19.0\n"
           ]
         }
       ]
