--- a/Matrices y algebra  lineal.ipynb
+++ b/Matrices y algebra  lineal.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN21flmDnW5rlfLpDzpcP7f",
+      "authorship_tag": "ABX9TyOzuPwz5W9LHLq5QxtKgI9M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,8 +36,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Numpy"
+      ],
+      "metadata": {
+        "id": "opdwWqLN4HPG"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -96,7 +105,7 @@
         "id": "_HWl_EZNn0B1",
         "outputId": "ec23b605-0436-41ee-9a55-f6994cf27fa5"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
