--- a/libreria pandas.ipynb
+++ b/libreria pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPchXuN5Ya5IAZa984GdYz",
+      "authorship_tag": "ABX9TyOOzN0OGDInSz1wpf/M8qW8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,7 +92,7 @@
         "id": "pb0rwE1R8vvV",
         "outputId": "7d3b1fd2-547f-490d-f55b-78085002664b"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +199,7 @@
         "id": "1ImTPdtrjCQd",
         "outputId": "d9f7ad5d-4905-406e-ff32-c0572bab82dc"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,12 +264,12 @@
       ],
       "metadata": {
         "id": "pArB3dVdTWVA",
-        "outputId": "8f199ac9-3203-408d-cc9a-8b4cbd85e685",
+        "outputId": "5b9c3e3b-6e37-431b-fb7a-b01106c865b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,6 +347,37 @@
             "[12 85 23 88 34]\n",
             "48.4\n",
             "-1.6000000000000014 : se debe sumar eso para que sea 50\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "datos_diccionario = {\"día1\": 420, \"día2\": 380, \"día3\": 390}\n",
+        "serie_dict = pd.DataFrame(datos_diccionario)\n",
+        "print(\"Serie desde diccionario:\\n\", serie_dict)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TacUCPGhDK84",
+        "outputId": "12bdb59e-3cad-40e0-d3ef-faa1380e4773"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Serie desde diccionario:\n",
+            " día1    [420]\n",
+            "día2    [380]\n",
+            "día3    [390]\n",
+            "dtype: object\n"
           ]
         }
       ]
