--- a/libreria pandas.ipynb
+++ b/libreria pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOOzN0OGDInSz1wpf/M8qW8",
+      "authorship_tag": "ABX9TyMv7iiEuvuzOBLRdjvZAzk7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
         "datas = {\n",
         "        'Nombre' : ['Ana','Jorge','Roberto','Diego','Federico'],\n",
         "        'Edad' : [30,25,50,33,80],\n",
-        "        'Ciudad': ['Montevideo','Buenos Aires','Brasilia','Bogota', 'Santiago'],\n",
+        "        'Ciudad': ['Montevideo','Buenos Aires','Montevideo','Bogota', 'Santiago'],\n",
         "        }\n",
         "\n",
         "df = pd.DataFrame(datas)\n",
@@ -83,16 +83,37 @@
         "\n",
         "print(df.loc[2:4,['Nombre','Edad']],\"\\n\") ##el .loc sirve para filtrar, primero toma la/s fila/s, (los dos : separa entre que fila(inclusive) y fila(inclusive) va a seleccionar), seguido a eso elige la/s columna/s que queres filtrar\n",
         "\n",
-        "print(df.iloc[2:5,0:2]) ##el .iloc sirve para filtrar pero por numero de fila y numero de columna, y selecciona el primer numero hasta el anterior del segundo numero elegido\n"
+        "print(df.iloc[2:5,0:2],'\\n') ##el .iloc sirve para filtrar pero por numero de fila y numero de columna, y selecciona el primer numero hasta el anterior del segundo numero elegido\n",
+        "\n",
+        "edad_mayor_30 = df[(df['Edad'] > 30) | (df['Ciudad'] == 'Buenos Aires')]\n",
+        "\n",
+        "print(edad_mayor_30,'\\n')\n",
+        "\n",
+        "##print(df[(df['Edad'] > 30) | (df['Ciudad'] == 'Buenos Aires')])\n",
+        "\n",
+        "\n",
+        "\n",
+        "agregar = df.groupby('Ciudad').agg({'Edad':['max','min','mean','count']})\n",
+        "\n",
+        "\n",
+        "print(agregar)\n",
+        "\n",
+        "\n",
+        "filtrar_mayores_30_agrupar_por_ciudad = df.loc[df['Edad'] >= 30].groupby('Ciudad').agg({'Edad':['min','max','mean']}) ## selecciona solo los mayores o igual a 30 años, los agrupa por ciudad con las tablas agregadas:\n",
+        "                                                                                               ## min, max, mean que apuntan a la tabla edad, como resultado te da  la edad minima, maxima\n",
+        "                                                                                               ## y el promedio por ciudad\n",
+        "\n",
+        "print(filtrar_mayores_30_agrupar_por_ciudad)\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pb0rwE1R8vvV",
-        "outputId": "7d3b1fd2-547f-490d-f55b-78085002664b"
+        "outputId": "7f67b9d7-018c-40d1-b4a5-da409a58c40f"
       },
-      "execution_count": null,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +122,7 @@
             "     Nombre  Edad        Ciudad\n",
             "0       Ana    30    Montevideo\n",
             "1     Jorge    25  Buenos Aires\n",
-            "2   Roberto    50      Brasilia\n",
+            "2   Roberto    50    Montevideo\n",
             "3     Diego    33        Bogota\n",
             "4  Federico    80      Santiago \n",
             "\n",
@@ -113,7 +134,27 @@
             "     Nombre  Edad\n",
             "2   Roberto    50\n",
             "3     Diego    33\n",
-            "4  Federico    80\n"
+            "4  Federico    80 \n",
+            "\n",
+            "     Nombre  Edad        Ciudad\n",
+            "1     Jorge    25  Buenos Aires\n",
+            "2   Roberto    50    Montevideo\n",
+            "3     Diego    33        Bogota\n",
+            "4  Federico    80      Santiago \n",
+            "\n",
+            "             Edad                \n",
+            "              max min  mean count\n",
+            "Ciudad                           \n",
+            "Bogota         33  33  33.0     1\n",
+            "Buenos Aires   25  25  25.0     1\n",
+            "Montevideo     50  30  40.0     2\n",
+            "Santiago       80  80  80.0     1\n",
+            "           Edad          \n",
+            "            min max  mean\n",
+            "Ciudad                   \n",
+            "Bogota       33  33  33.0\n",
+            "Montevideo   30  50  40.0\n",
+            "Santiago     80  80  80.0\n"
           ]
         }
       ]
