--- a/Primer entrega.ipynb
+++ b/Primer entrega.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/ddopazo92/Introduccion_datascience_diego_dopazo/blob/main/Primer%20entrega.ipynb",
-      "authorship_tag": "ABX9TyNjTXe8RC/Du2Y2T+Dl2cWR",
+      "authorship_tag": "ABX9TyP5RN3ADrTEDFU9hOq58XjA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,58 +29,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BA5wxy4fm_5b",
-        "outputId": "cda4d43e-65ac-4420-9d4d-e9dd18da7c26"
+        "outputId": "b2589793-9b97-4e66-d96c-c1226ae47a0d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "                      Nombre Plataforma  Año de lanzamiento      Genero  \\\n",
-            "0                 WII SPORTS        Wii                2006    Deportes   \n",
-            "1             MARIO KART WII        Wii                2008    Carreras   \n",
-            "2          WII SPORTS RESORT        Wii                2009    Deportes   \n",
-            "3      NEW SUPER MARIO BROS.         DS                2006  Plataforma   \n",
-            "4                   WII PLAY        Wii                2006  Miscelania   \n",
-            "5  NEW SUPER MARIO BROS. WII        Wii                2009  Plataforma   \n",
+            "              Nombre Plataforma  Año de lanzamiento    Genero   Editora  \\\n",
+            "0         WII SPORTS        Wii                2006  Deportes  Nintendo   \n",
+            "1     MARIO KART WII        Wii                2008  Carreras  Nintendo   \n",
+            "2  WII SPORTS RESORT        Wii                2009  Deportes  Nintendo   \n",
             "\n",
-            "    Editora  Ventas USA  Ventas Europa  Ventas Japon  \\\n",
-            "0  Nintendo       41.36          28.96          3.77   \n",
-            "1  Nintendo       15.68          12.76          3.79   \n",
-            "2  Nintendo       15.61          10.93          3.28   \n",
-            "3  Nintendo       11.28           9.14          6.50   \n",
-            "4  Nintendo       13.96           9.18          2.93   \n",
-            "5  Nintendo       14.44           6.94          4.70   \n",
+            "   Ventas USA  Ventas Europa  Ventas Japon  Ventas en Resto del Mundo  \\\n",
+            "0       41.36          28.96          3.77                       8.45   \n",
+            "1       15.68          12.76          3.79                       3.29   \n",
+            "2       15.61          10.93          3.28                       2.95   \n",
             "\n",
-            "   Ventas en Resto del Mundo  Ventas Totales  Puntuacion de criticos  \\\n",
-            "0                       8.45           82.53                    76.0   \n",
-            "1                       3.29           35.52                    82.0   \n",
-            "2                       2.95           32.77                    80.0   \n",
-            "3                       2.88           29.80                    89.0   \n",
-            "4                       2.84           28.92                    58.0   \n",
-            "5                       2.24           28.32                    87.0   \n",
+            "   Ventas Totales  Puntuacion de criticos  Cantidad de criticas  \\\n",
+            "0           82.53                    76.0                  51.0   \n",
+            "1           35.52                    82.0                  73.0   \n",
+            "2           32.77                    80.0                  73.0   \n",
             "\n",
-            "   Cantidad de criticas  Puntaje de Usuario  Cantidad de usuarios  \\\n",
-            "0                  51.0                 8.0                   322   \n",
-            "1                  73.0                 8.3                   709   \n",
-            "2                  73.0                 8.0                   192   \n",
-            "3                  65.0                 8.5                   431   \n",
-            "4                  41.0                 6.6                   129   \n",
-            "5                  80.0                 8.4                   594   \n",
+            "   Puntaje de Usuario  Cantidad de usuarios Desarrollador  \\\n",
+            "0                 8.0                   322      Nintendo   \n",
+            "1                 8.3                   709      Nintendo   \n",
+            "2                 8.0                   192      Nintendo   \n",
             "\n",
-            "  Desarrollador Clasificacion por Edad  \n",
-            "0      Nintendo                      E  \n",
-            "1      Nintendo                      E  \n",
-            "2      Nintendo                      E  \n",
-            "3      Nintendo                      E  \n",
-            "4      Nintendo                      E  \n",
-            "5      Nintendo                      E  \n"
+            "  Clasificacion por Edad  \n",
+            "0                      E  \n",
+            "1                      E  \n",
+            "2                      E  \n"
           ]
         }
       ],
@@ -92,12 +77,6 @@
         "\n",
         "df = pd.read_csv(url, sep=';')\n",
         "\n",
-        "\n",
-        "\n",
-        "##df = df.rename(columns={'Name':'Nombre', 'Platform':'Plataforma','Year_of_Release':'Año_de_lanzamiento','Genre':'Genero','Publisher':'Editora','NA_Sales':'Ventas USA',\n",
-        "                       ## 'EU_Sales':'Ventas Europa','JP_Sales':'Ventas Japon', 'Other_Sales':'Ventas en Resto del Mundo','Global_Sales':'Ventas Totales',\n",
-        "                       ## 'Critic_Score':'Puntuacion de criticos','Critic_Count':'Cantidad de criticas', 'User_Score':'Puntaje de Usuario',\n",
-        "                       ## 'User_Count':'Cantidad de usuarios','Developer_Rating':'Clasificacion por Edad'})\n",
         "\n",
         "df = df.set_axis(['Nombre', 'Plataforma', 'Año de lanzamiento','Genero', 'Editora', 'Ventas USA','Ventas Europa', 'Ventas Japon','Ventas en Resto del Mundo',\n",
         "                  'Ventas Totales', 'Puntuacion de criticos','Cantidad de criticas', 'Puntaje de Usuario','Cantidad de usuarios','Desarrollador','Clasificacion por Edad'], axis=1)\n",
@@ -116,8 +95,16 @@
         "df['Genero'] = df['Genero'].str.replace('Strategy','Estrategia')\n",
         "\n",
         "\n",
+        "##creacion de rango de fechas\n",
         "\n",
-        "print(df.head(6))"
+        "dosmil = df['Año de lanzamiento'].between(2000, 2010)\n",
+        "\n",
+        "##promedio = dosmil['Puntuacion de criticos'].resample('Y').mean()\n",
+        "#print(promedio)\n",
+        "\n",
+        "\n",
+        "print(df[dosmil].head(3))\n",
+        "##print(df.head(6))"
       ]
     }
   ]
